# DiMer

./: .claudeignore  .env.example  .gitignore  ALGO.md  Notes.md  README.md  __main__.py  benchmark.py  pyproject.toml  requirements.txt  setup_testing.sh  test_snowflake.py  test_table_comparison.py
.claude/: settings.local.json
diffforge/: __init__.py
diffforge/connectors/: __init__.py
diffforge/connectors/bigquery/: connector.py
diffforge/connectors/databricks/: connector.py
diffforge/connectors/files/: __init__.py  csv_connector.py  parquet_connector.py
diffforge/connectors/mysql/: __init__.py  connector.py
diffforge/connectors/postgresql/: connector.py
diffforge/connectors/snowflake/: __init__.py  connector.py  zzzz_var_connect.py  zzzz_var_snowflake.py
diffforge/core/: __init__.py  base.py  compare.py  factory.py  manager.py  models.py
dimer/: __init__.py  __main__.py  cli.py
dimer/connectors/bigquery/: __init__.py  connector.py
dimer/connectors/databricks/: __init__.py  connector.py
dimer/connectors/files/: csv_connector.py  parquet_connector.py
dimer/connectors/mysql/: connector.py
dimer/connectors/postgresql/: __init__.py  connector.py
dimer/connectors/snowflake/: connector.py
dimer/core/: __init__.py  base.py  compare.py  factory.py  manager.py  models.py  types.py
dimer/metrics/: __init__.py  collector.py
dimer/persistence/: config.py  repository.py  schema.py
dimer/persistence/sql/: postgres_schema.sql  sqlite_schema.sql
examples/: advanced_usage.py  basic_usage.py
tests/: __init__.py  conftest.py  test_connectors.py  test_core.py  test_databricks_integration.py  test_metrics.py  test_mysql_integration.py  test_new_connectors.py  test_postgres_integration.py  test_snowflake_integration.py
